# ideas

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ae.bat  encoding_example.py  pyproject.toml  setup.py  simple_test.py  todo.md  usercustomize.py
.github/ISSUE_TEMPLATE/: general-issue.md
docs/: Makefile  make.bat
docs/doctrees/: as_main.doctree  ast.doctree  auto_self.doctree  bytecode.doctree  console.doctree  console_code.doctree  constants.doctree  decimal_math.doctree  environment.pickle  excluded.doctree  fractional_math_ast.doctree  fractional_math_tok.doctree  french.doctree  french_repeat.doctree  function.doctree  function_keyword.doctree  function_simplest.doctree  guide.doctree  implicit_multiplication.doctree  import_hook.doctree  index.doctree  invocation.doctree  invoque.doctree  json.doctree  lambda.doctree  modules.doctree  motivation.doctree  nobreak.doctree  non_files.doctree  pep_505.doctree  possible.doctree  repeat.doctree  repl.doctree  switch.doctree  token_utils.doctree  tokenize.doctree  tokenize_notebook.doctree  usage.doctree  (+2 more)
ideas/: __init__.py  __main__.py  console.py  constant_module_type.py  custom_encoding.py  encoding.py  enforce_constants.py  experimental_syntax_encoding.py  import_hook.py  lambda_encoding.py  main_hack.py  patching_hook.py  session.py  token_utils.py  transformer.py  utils.py
stuff/: proposal.md
tests/: test_patching_hook.py
usage_demo/: README_demo.rst  encoding_example.py  loader_1.py  loader_2.py  my_other_program.py  my_program.py  tortue.pyfr  tortue_demo.py  usercustomize.py
(+234 files in other folders)
